v1 de la page de preinscription

--- a/content/index.html
+++ b/content/index.html
@@ -368,7 +368,7 @@ ul.social_buttons > li{
                 <div class="row">
                     <div style="margin:5px auto;width:100%;">
                         <a target="_blank" href="https://laprimaire.org/adherer/" style="font-size:24px;font-variant:small-caps;width:250px;cursor:pointer;margin-bottom:5px;" class="btn red" title="Je fais un don">Faire un don</a>
-                        <a target="_blank" data-toggle="modal" data-target="#EnrollNow" style="font-size:24px;font-variant:small-caps;width:250px;cursor:pointer;margin-bottom:5px;" class="btn blue" title="Je participe">Etre candidat</a>
+                        <a href="/inscription-candidat/" style="font-size:24px;font-variant:small-caps;width:250px;cursor:pointer;margin-bottom:5px;" class="btn blue" title="Je participe">Etre candidat</a>
                     </div>
                 </div>
                 <div class="row">
