--- a/content/inscription-candidat.html
+++ b/content/inscription-candidat.html
@@ -9,22 +9,34 @@ candidats: true
 author: des citoyens ordinaires
 description: Utilisez le formulaire suivant pour vous déclarer candidat(e) et obtenir toutes les informations dont vous aurez besoin pour réussir votre campagne sur LaPrimaire.org
 ---
-
+<style>
+    #page-top {
+        background-repeat: repeat;
+        background-image: url(https://s3.eu-central-1.amazonaws.com/laprimaire/crowd-700x250.jpg);
+        background-size: 700px;
+    }
+    #header_overlay.red {
+        background: rgba(217,29,28,0.9);
+    }
+    #header_overlay {
+        padding-top: 15px;
+    }
+</style>
     <header id="page-top">
 	<div id="header_overlay" class="red">
         <div class="container">
             <div class="row">
 		    <div class="title">
-			<h2>Inscription candidat(e)</h2>
+			<h2>Inscription candidat(e) pour les législatives</h2>
 		    </div>
 	    </div>
         </div>
-        </div>
+    </div>
     </header>
 
     <section id="contribute_form">
 	    <div class="container">
-	    <div class="row" style="text-align:justify;">
+	    <div class="row" style="text-align:justify;display:none;">
   		        <div class="col-lg-2"></div>
 			<div class="col-lg-8">
 			    <p style="font-size:14px; color:#777;font-style:italic;">Vous avez une vision et un programme pour la France et vous souhaitez le proposer aux Français ? Inscrivez-vous dès à présent pour commencer à recevoir les informations qui vous permettront de préparer au mieux votre campagne sur LaPrimaire.org.</p>
@@ -39,26 +51,25 @@ description: Utilisez le formulaire suivant pour vous déclarer candidat(e) et o
 		    <div class="row">
   		        <div class="col-lg-3"></div>
 			<div class="col-lg-6">
-				<div id="wufoo-z1qwcojb1a9mk4f">
-					Fill out my <a href="https://democratech.wufoo.com/forms/z1qwcojb1a9mk4f">online form</a>.
+				<div id="wufoo-ry2r5mf1qxell0">
+					Fill out my <a href="https://democratech.wufoo.com/forms/ry2r5mf1qxell0">online form</a>.
 				</div>
-				<script type="text/javascript">var z1qwcojb1a9mk4f;(function(d, t) {
+				<script type="text/javascript">var ry2r5mf1qxell0;(function(d, t) {
 var s = d.createElement(t), options = {
-'userName':'democratech',
-'formHash':'z1qwcojb1a9mk4f',
-'autoResize':true,
-'height':'1979',
-'async':true,
-'host':'wufoo.com',
-'header':'hide',
-'ssl':true};
+	'userName':'democratech',
+	'formHash':'ry2r5mf1qxell0',
+	'autoResize':true,
+	'height':'2615',
+	'async':true,
+	'host':'wufoo.com',
+	'header':'show',
+	'ssl':true};
 s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
 s.onload = s.onreadystatechange = function() {
-var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-try { z1qwcojb1a9mk4f = new WufooForm();z1qwcojb1a9mk4f.initialize(options);z1qwcojb1a9mk4f.display(); } catch (e) {}};
+	var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+	try { ry2r5mf1qxell0 = new WufooForm();ry2r5mf1qxell0.initialize(options);ry2r5mf1qxell0.display(); } catch (e) {}};
 var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-})(document, 'script');</script>
-
+				})(document, 'script');</script>
 			</div>
 		        <div class="col-lg-3"></div>
 		    </div>
