mini fixes page accueil

--- a/content/equipe.html
+++ b/content/equipe.html
@@ -10,6 +10,20 @@ author: des citoyens ordinaires
 description: LaPrimaire.org est organisée par des citoyens et des citoyennes ordinaires, indépendants de tout parti politique, ayant pris un engagement de neutralité et ayant interdiction d'être candidats.
 ---
 <style>
+    #page-top {
+        background-repeat: repeat;
+        background-image: url(https://s3.eu-central-1.amazonaws.com/laprimaire/crowd-700x250.jpg);
+        background-size: 700px;
+    }
+    #header_overlay {
+        padding-top: 15px;
+    }
+    #header_overlay.red {
+        background: rgba(217,29,28,0.9);
+    }
+</style>
+
+<style>
 <!--
 .team-member {
     margin-bottom: 15px;
@@ -247,7 +261,7 @@ description: LaPrimaire.org est organisée par des citoyens et des citoyennes or
 		<div class="clearfix visible-md-block"></div>
                 <div class="col-lg-1 col-md-4" style="padding:0px;">
                     <div class="team-member">
-                        <img src="/assets/images/team/tatienne.jpg" class="img-responsive img-circle" alt="">
+                        <img src="https://s3.eu-central-1.amazonaws.com/laprimaire/equipe/tatienne.png" class="img-responsive img-circle" alt="">
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-8">
