--- a/content/presse.html
+++ b/content/presse.html
@@ -7,6 +7,16 @@ primaire: true
 author: des citoyens ordinaires
 description: Tout savoir sur LaPrimaire.org
 ---
+<style>
+    #page-top {
+        background-repeat: repeat;
+        background-image: url(https://s3.eu-central-1.amazonaws.com/laprimaire/crowd-700x250.jpg);
+        background-size: 700px;
+    }
+    #header_overlay {
+        padding-top: 15px;
+    }
+</style>
 
     <header id="page-top">
 	<div id="header_overlay" class="blue">
