--- a/content/contact.html
+++ b/content/contact.html
@@ -7,6 +7,19 @@ association: true
 author: des citoyens ordinaires
 description: Utilisez le formulaire suivant pour entrer en contact avec l'équipe de LaPrimaire.org 
 ---
+<style>
+    #page-top {
+        background-repeat: repeat;
+        background-image: url(https://s3.eu-central-1.amazonaws.com/laprimaire/crowd-700x250.jpg);
+        background-size: 700px;
+    }
+    #header_overlay {
+        padding-top: 15px;
+    }
+    #header_overlay.red {
+        background: rgba(217,29,28,0.9);
+    }
+</style>
 
     <header id="page-top">
 	<div id="header_overlay" class="red">
