--- a/content/manifeste.html
+++ b/content/manifeste.html
@@ -7,6 +7,16 @@ manifeste: true
 author: des citoyens ordinaires
 description: Si vous faites partie des citoyens déçus et lassés des politiques français et que vous souhaitez nous donner un coup de main pour redonner du sens aux élections, remplissez ce formulaire pour nous aider à organiser LA Primaire démocratique et ouverte en vue des élections de 2017.
 ---
+<style>
+    #page-top {
+        background-repeat: repeat;
+        background-image: url(https://s3.eu-central-1.amazonaws.com/laprimaire/crowd-700x250.jpg);
+        background-size: 700px;
+    }
+    #header_overlay {
+        padding-top: 15px;
+    }
+</style>
 
     <header style="padding:0px;margin-top:80px;">
 	<div id="header_overlay" class="white">
