--- a/content/index.html
+++ b/content/index.html
@@ -393,7 +393,7 @@ ul.social_buttons > li{
                     <div id="mc_embed_signup">
                     <form action="//democratech.us10.list-manage.com/subscribe/post?u=8c2d56a7d4aaae67a22a6e953&amp;id=c673465aad" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
-                        <label for="mce-EMAIL" style="font-weight:normal;">Citoyens, inscrivez-vous pour être tenu au courant de l'ouverture officielle*&nbsp; :</label>
+                        <label for="mce-EMAIL" style="font-weight:normal;">Citoyen(ne)s, inscrivez-vous pour être tenu(e)s informé(e)s de l'ouverture officielle*&nbsp; :</label>
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="adresse email" required>
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8c2d56a7d4aaae67a22a6e953_c673465aad" tabindex="-1" value=""></div>
@@ -529,7 +529,7 @@ ul.social_buttons > li{
 					    <h3>Comment ça marche ?</h3>
 					    <p>Un processus de sélection des candidats (voir <a href="/reglement/">le déroulement</a>) a été spécifiquement mis au point pour permettre une primaire démocratique à laquelle toute personne peut se présenter et au sein de laquelle toutes les idées peuvent s'exprimer.</p>
 					    <h3>Comment participer ?</h3>
-                        <p>Si vous souhaitez contribuer à faire émerger une candidature citoyenne forte pour 2017, inscrivez-vous dès aujourd'hui pour <a data-target="#EnrollNow" class="joinus_action" data-toggle="modal" style="cursor:pointer;">être candidat</a>. La primaire dans votre circonscription n'aura pas lieu si moins de 1,000 citoyens y sont inscrits à la fin de la phase de qualification.</p>
+                        <p>Si vous souhaitez contribuer à faire émerger une candidature citoyenne forte pour 2017, inscrivez-vous dès aujourd'hui pour <a href="/inscription-candidat/">être candidat</a>. La primaire dans votre circonscription n'aura pas lieu si moins de 1,000 citoyens y sont inscrits à la fin de la phase de qualification.</p>
 					    <h3>Qui organise ?</h3>
 					    <p><i>LaPrimaire.org</i> est organisée de manière entièrement bénévole par des citoyens ordinaires indépendants des partis politiques. Initiée par democratech, association Loi 1901 dont l’objet est de favoriser la participation et l’implication du plus grand nombre à la vie citoyenne et civique française, le projet est aujourd’hui porté par le parti politique « LaPrimaire.org » afin de se conformer à l’ensemble des conditions légales requises pour présenter et financer des candidat(e)s aux élections.</p>
 					    <h3>Qui finance ?</h3>
