bugfix / preview fb

--- a/content/index.html
+++ b/content/index.html
@@ -1,13 +1,13 @@
 ---
-title: Participez à LaPrimaire.org - la 1ère primaire citoyenne pour un VRAI choix en 2017 !
-social_title: Participez à LaPrimaire.org - la 1ère primaire citoyenne pour un VRAI choix en 2017 !
-image: https://s3.eu-central-1.amazonaws.com/laprimaire/images/primaire_citoyenne_dec16.png
+title: En 2017, les citoyens entrent à l'Assemblée Nationale - Soyez candidats !
+social_title: En 2017, les citoyens entrent à l'Assemblée Nationale - Soyez candidats !
+image: https://s3.eu-central-1.amazonaws.com/laprimaire/images/primaire_citoyenne_fev17.jpg
 footer: true
 navbar: false
 no_navbar: true
 home: true
 author: des citoyens ordinaires
-description: LaPrimaire.org est une Primaire citoyenne ouverte organisée hors des partis politiques pour les élections de 2017. La Primaire vise à rassembler les citoyens déçus et lassés des politiques et qui souhaitent redonner du sens aux élections en soutenant et participant à une grande primaire citoyenne, apartisane, ouverte, en 2017 afin d'élire des candidats vraiment représentatifs.
+description: LaPrimaire.org est une Primaire citoyenne ouverte organisée hors des partis politiques pour les élections législatives de 2017. LaPrimaire.org organise 577 primaires ouvertes dans les 577 circonscriptions françaises pour apporter visibilité et légitimité aux citoyens qui souhaitent s'investir pour leur pays en dehors des partis politiques.
 ---
 <!--title: LaPrimaire.org : le vote est ouvert ! La Primaire Citoyenne pour l'élection présidentielle de 2017 - LaPrimaire.org
 image: https://s3.eu-central-1.amazonaws.com/laprimaire/laprimaire-banner-rectangle.jpg
