--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,9 @@
 ---
-title: En 2017, les citoyens entrent à l'Assemblée Nationale - Soyez candidats !
-social_title: En 2017, les citoyens entrent à l'Assemblée Nationale - Soyez candidats !
+title: En 2017, les citoyen(ne)s entrent à l'Assemblée Nationale - Soyez candidat !
+social_title: En 2017, les citoyen(ne)s entrent à l'Assemblée Nationale - Soyez candidat !
 image: https://s3.eu-central-1.amazonaws.com/laprimaire/images/primaire_citoyenne_fev17.jpg
 footer: true
+url: https://legislatives.laprimaire.org
 navbar: false
 no_navbar: true
 home: true
