Ajout documentation juridique

--- a/content/index.html
+++ b/content/index.html
@@ -526,7 +526,7 @@ ul.social_buttons > li{
                     </div>
                     <div class="col-lg-2 col-md-1 hidden-xs hidden-sm"></div>
                 </div>
-                <div class="row">
+                <div class="row" style="display:none;">
                     <div class="hidden-lg hidden-md col-xs-8">
                         <form>
                           <div class="form-group">
@@ -551,7 +551,7 @@ ul.social_buttons > li{
                     </div>
                 </div>
                 <div class="row" style="padding: 20px 0px;">
-                    <a href="/reglement/">Règlement et calendrier</a> - <a href="/charte/">Charte du candidat</a>
+			<a href="/reglement/">Règlement et calendrier</a> - <a href="/charte/">Charte du candidat</a> - <a href="/documentation/">Documentation candidats</a>
                 </div>
                 <p style="font-size:10px;text-align:justify;color:#777;font-style:italic;">* Les informations recueillies sont nécessaires à la gestion de nos relations. Elles font l’objet d’un traitement informatique et sont réservées à l’usage de LaPrimaire.org - Association Loi 1901 (RNA n° W751235289). En remplissant ce formulaire, vous nous autorisez à utiliser vos données pour des opérations d'information, de communication et de dons. Vos informations ne pourront être communiquées qu’à des co-contractants de LaPrimaire.org, qui, en leur qualité de sous-traitants, n'agiront que sur les instructions de cette dernière et seront soumis à une stricte obligation de confidentialité. Vos données ne seront jamais commercialisées. En application des dispositions des articles 38 et suivants de la loi du 6 janvier 1978 modifiée, vous bénéficiez d’un droit d’accès, de rectification, de suppression et d’opposition aux informations vous concernant. Vous pouvez exercer ces droits en nous adressant un e-mail à l’adresse confidentialite@laprimaire.org.</p>
             </div>
