MAJ site legislatives

--- a/content/index.html
+++ b/content/index.html
@@ -400,6 +400,7 @@ ul.social_buttons > li{
                 <div class="intro-heading">
                     <div>577 Primaires Ouvertes pour 2017</div>
                 </div>
+		<div style="font-size:15px;" class="alert alert-warning">Mise à jour du 22 mai 2017 : <a href="https://articles.laprimaire.org/pas-de-primaires-pour-les-l%C3%A9gislatives-2017-1b60c8e21bb6" target="_blank">Annulation des primaires pour les élections législatives</a></div><br>
                 <div style="font-size:15px;font-style:italic;width:90%;text-align:justify;margin: 0 auto;" class="visible-xs-block">&laquo;&nbsp;Aujourd'hui en France, <b>0,5%</b> de la population (les partis politiques) désigne les candidats aux élections et élabore les programmes. Pour répondre à ce problème démocratique, LaPrimaire.org organise 577 primaires en ligne 100% démocratiques et ouvertes pour permettre aux citoyens de choisir leurs candidat(e)s et de co-construire les projets politiques. Un seul objectif : faire émerger collectivement les meilleures candidatures citoyennes pour les élections législatives de 2017&nbsp;&raquo;</div>
                 <div style="font-size:15px;font-style:italic;width:80%;text-align:justify;margin: 0 auto;" class="visible-sm-block">&laquo;&nbsp;Aujourd'hui en France, <b>0,5%</b> de la population (les partis politiques) désigne les candidats aux élections et élabore les programmes. Pour répondre à ce problème démocratique, LaPrimaire.org organise 577 primaires en ligne 100% démocratiques et ouvertes pour permettre aux citoyens de choisir leurs candidat(e)s et de co-construire les projets politiques. Un seul objectif : faire émerger collectivement les meilleures candidatures citoyennes pour les élections législatives de 2017&nbsp;&raquo;</div>
                 <div style="font-size:16px;font-style:italic;width:70%;text-align:justify;margin: 0 auto;" class="visible-md-block">&laquo;&nbsp;Aujourd'hui en France, <b>0,5%</b> de la population (les partis politiques) désigne les candidats aux élections et élabore les programmes. Pour répondre à ce problème démocratique, LaPrimaire.org organise 577 primaires en ligne 100% démocratiques et ouvertes pour permettre aux citoyens de choisir leurs candidat(e)s et de co-construire les projets politiques. Un seul objectif : faire émerger collectivement les meilleures candidatures citoyennes pour les élections législatives de 2017&nbsp;&raquo;</div>
@@ -546,7 +547,6 @@ ul.social_buttons > li{
                 <div id="nb_citoyens_app"></div>
                 <div class="row">
                     <div style="margin:5px auto;width:100%;">
-                        <a target="_blank" href="https://laprimaire.org/adherer/" style="font-size:24px;font-variant:small-caps;width:250px;cursor:pointer;margin-bottom:5px;" class="btn red" title="Je fais un don">Faire un don</a>
                         <a data-toggle="modal" data-target="#JoinUsNow" style="font-size:24px;font-variant:small-caps;width:250px;cursor:pointer;margin-bottom:5px;" class="btn blue" title="Je participe">Participer</a>
                     </div>
                 </div>
